# call_agent

./: .gitignore  CLAUDE.md  README.md  design_doc.md  my_prompt  pyproject.toml  render.yaml
.claude/: settings.local.json
.claude/projects/C--Users-TomerMassas-Documents-GitHub-call_agent/memory/: MEMORY.md  feedback_working_guidelines.md  project_context.md  project_progress.md  project_roadmap.md  user_profile.md
.github/workflows/: ci.yml
scripts/: seed_data.py
src/call_agent/: bootstrap.py  config.py
src/call_agent/api/: app.py  deps.py
src/call_agent/api/routes/: __init__.py  chat.py  webhook.py
src/call_agent/api/static/: chat.html
src/call_agent/domain/: enums.py  models.py  protocol.py  schemas.py
src/call_agent/repositories/: __init__.py  conversation.py  file_conversation.py  scheduling_api.py
src/call_agent/services/: __init__.py  agent.py  prompts.py  routing.py  tools.py
src/call_agent/services/protocol/: engine.py  prompts_he.py  validators.py
src/call_agent/services/protocol/handlers/: common.py  existing.py  intent.py  message.py  new_booking.py  time_selection.py
tests/integration/: test_e2e.py
tests/unit/: test_agent.py  test_conversation_repo.py  test_file_conversation_repo.py  test_models.py  test_placeholder.py  test_protocol_engine.py  test_protocol_validators.py  test_routing.py  test_scheduling_api.py  test_tools.py  test_webhook.py
